[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Dylan Schultz <hello@schultzie.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
datetime = "^5.0"
discord = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
